--- a/config.org
+++ b/config.org
@@ -134,6 +134,16 @@ Sets the command modifier to meta and makes brackets and pipe work
     (add-to-list 'default-frame-alist
 		 '(font . "Inconsolata-14"))
   #+END_SRC
+* Navigation
+** Jump
+#+BEGIN_SRC emacs-lisp
+  (use-package ace-jump-mode
+    :ensure t
+    :bind (("C-. C-." . ace-jump-word-mode)
+           ("C-. C-k" . ace-jump-char-mode)
+           ("C-. C-l" . ace-jump-line-mode)))
+
+#+END_SRC
 * Coding
 ** General
 *** Multiple cursors
