--- a/config.org
+++ b/config.org
@@ -26,7 +26,7 @@
 (when (boundp 'package-pinned-packages)
   (setq package-pinned-packages
         '((org-plus-contrib . "org"))))
-(package-initialize)
+(unless package--initialized (package-initialize t))
 
 ;;; Bootstrap use-package
 ;; Install use-package if it's not already installed.
@@ -120,6 +120,12 @@ Sets the command modifier to meta and makes brackets and pipe work
     :config
     (add-hook 'org-mode-hook (lambda () (org-bullets-mode 1))))
 
+#+END_SRC
+* Evil mode
+An extensible vi layer. Provides Vim features like Visual selextion etc
+#+BEGIN_SRC emacs-lisp
+  (use-package evil
+               :ensure t)
 #+END_SRC
 * General Styling
 ** Theme
